			SWI-Prolog ChangeLog
			====================

  * FIXED: call_cleanup/3 crashed if the cleanup handler invoked GC.  GC
    is now explicitely blocked.  Found by Mike Elston.

  * callProlog(): replaced warning with exception.

  * IDE: Avoid various problems selecting the preferred editor.  See the
    new prolog-flag `editor' and the example .plrc (pl.ini).

  * INSTALL: Added some code to configure and Makefile.in in the top-directory
    to allow for ./configure --with-world && make && make install to build
    the complete suite on a well-supported platform.

  * INSTALL: Fixed detection of profiling support on really fast machines
    (Sergey Tikhonov).


VERSION 5.0.4
=============

  * DOC: re-arranged sections on I/O handling a bit to clarify the position
    and relation between Edinburgh-style and ISO I/O handling.

  * ADDED: prolog_load_file/2: a hook into load_files/2.

  * MODIFIED: source_location/2 no longer changes the filename into an
    absolute path (instead, it is the path used to open the file).

  * ADDED: set_stream(Stream, file_name(Name)) and set_stream(Stream.
    record_position(Bool)).

  * ADDED: loading a program from a stream.  See load_files/2 for details.

  * FIXED: plwin.exe: console placement to use
    SystemParametersInfo(SPI_GETWORKAREA, ...) to determine the boundary.
    Also, get current window position from GetWindowsPlacement().
    (Tolga Konik).

  * MODIFIED: Prolog Navigator now calls default edit/1 interface (suggested
    by Tolga Konik).

  * ADDED: EWOULDBLOCK handling in pl-stream.h, so we can use this interface
    on machines that do not support this error (Windows).

  * FIXED: Various minor improvements in the Windows registration of Prolog.

  * ADDED: unwise_install to wise.pl to do the registration after running
    Wise.

  * FIXED: qsave_program handling of loaded foreign libraries.  Reported
    by Fabien Todescato.

  * ADDED: GUI-Tracer: add pseudo variable names DCG_list and DCG_tail
